trying overflow fix

--- a/blakearchive/static/css/override.css
+++ b/blakearchive/static/css/override.css
@@ -1408,6 +1408,7 @@ a.compare-selected-objects {
     .copies-in-work,.objects-in-copy,.object-result-highlight{
         max-height: 89%;
         overflow-y: scroll;
+        -webkit-overflow-scrolling: touch;
         scrollbar-face-color: #666666;
         scrollbar-arrow-color: #666666;
         scrollbar-track-color: #0a0a0a;
